<resources>
    <string name="app_name">Dynasty_establishment</string>
    <string name="teacher">教师</string>
    <string name="student">学生</string>
    <string name="login">登录</string>
    <string name="gotoregister">未注册>>></string>
    <string name="register">注册</string>
    <string name="ask_for_id">学号</string>
    <string name="ask_for_pwd">密码</string>
    <string name="stu_tk">消息</string>
    <string name="stu_lt">联系人</string>
    <string name="stu_ex">考试</string>
    <string name="stu_vd">视频</string>
    <string name="info">个人信息</string>
    <string name="logout">退出登录</string>
    <string name="add">添加</string>
    <string name="add_no">请输入添加好友的学号或工号</string>

    <style name="Stu_buttom">
        <item name="android:layout_weight">1</item>
        <item name="android:layout_height">match_parent</item>
        <item name="android:layout_width">0dp</item>
        <item name="android:textSize">10dp</item>
        <item name="android:button">@null</item>
        <item name="android:gravity">center</item>
        <item name="android:paddingTop">5dp</item>
        <item name="android:background">@null</item>
        <item name="android:textColor">@drawable/text_selector</item>
    </style>


</resources>
