<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bk1"
    tools:context=".Teacher.TeaLoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shadow"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:background="@drawable/logo"/>
            <EditText
                android:id="@+id/tea_no"
                android:layout_width="200dp"
                android:hint="工号"
                android:gravity="center"
                android:textSize="15dp"
                android:singleLine="true"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/tea_pwd"
                android:layout_width="200dp"
                android:hint="@string/ask_for_pwd"
                android:gravity="center"
                android:textSize="15dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/tea_login"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:textColor="#FFFF"
            android:text="@string/login"
            android:background="@drawable/radius"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tea_go_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gotoregister"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>
</LinearLayout>